/* SPDX-License-Identifier: Apache-2.0 */

package hu.bme.mit.ftsrg.tpcc.entities;

public interface EntityInterface {
  String getType();

  String[] getKeyParts();

  byte[] toBuffer();

  void fromBuffer(byte[] buffer);

  String toJson();

  void fromJson(String json);
}
