package hu.bme.mit.ftsrg.tpcc.stub;

public interface ChaincodeStubInterface {
    
}
