package hu.bme.mit.ftsrg.tpcc.stub;

public class FabricChaincodeStub implements ChaincodeStubInterface {
    
}
