@startuml "Specification"
skinparam groupInheritance 2
Contract <|-- BusinessContract
BusinessContract ..> EnhancedContext
BusinessContract ..> EntityBase
EnhancedContext *--> EntityRegistry
EntityBase --|> EntityInterface
EntityRegistry ..> EntityInterface
Context <|-- EnhancedContext
EntityRegistry ..> ChaincodeStubInterface

ChaincodeStubInterface <|-- FabricChaincodeStub
ChaincodeStubInterface <|-- ChaincodeStubMiddlewareBase

ChaincodeStubMiddlewareBase ..> ChaincodeStubInterface:  nextLayer

ChaincodeStubMiddlewareBase <|-- WriteBackCachedChaincodeStub
ChaincodeStubMiddlewareBase <|-- UpdateThrottledChaincodeStub


class BusinessContract {
  // Add attributes and methods here
}

class EnhancedContext {
  // Add attributes and methods here
}

class EntityRegistry {
  private/public CRUD
  partial/range queries
}

class WriteBackCachedChaincodeStub {
  // Add attributes and methods here
}

class FabricChaincodeStub {
  // Add attributes and methods here
}

class EntityBase {
  // Add attributes and methods here
}

class Contract #C0C0C0{
  // Add attributes and methods here
}

class Context #C0C0C0{
  // Add attributes and methods here
}

interface EntityInterface #A9DCDF {
  getType()
  getKeyparts()
  toJson ()
  fromJson()
  toBuffer()
  fromBuffer()

}

interface ChaincodeStubInterface #C0C0C0{
  // Add attributes and methods here
}
class ChaincodeStubMiddlewareBase {
  
}

@enduml